--- a/trunk/roadmap/web/download.html
+++ b/trunk/roadmap/web/download.html
@@ -31,96 +31,82 @@ A version of RoadMap for the Sharp Zaurus is also available from
 </A>
 </CENTER>
 <HR>
-<P>Roadmap v1.0rc6 (gzip'ed tar files): 
-<UL>
-  <LI><A class=normal 
-         href="/roadmap/roadmap_1_0rc6_src.tar.gz">Sources only</A> 
-  <LI><A class=normal 
-         href="/roadmap/roadmap_1_0rc6_i686.tar.gz">Linux/i686 binaries</A> 
-  <LI><A class=normal 
-         href="/roadmap/roadmap_1_0rc6_armv4l.tar.gz">Linux/ARM binaries</A>
-  </LI>
-</UL>
-<P>Roadmap v1.0rc5 (gzip'ed tar files): 
-<UL>
-  <LI><A class=normal 
-         href="/roadmap/roadmap_1_0rc5_src.tar.gz">Sources only</A> 
-  <LI><A class=normal 
-         href="/roadmap/roadmap_1_0rc5_i686.tar.gz">Linux/i686 binaries</A> 
-  <LI><A class=normal 
-         href="/roadmap/roadmap_1_0rc5_armv4l.tar.gz">Linux/ARM binaries</A>
-  </LI>
-</UL>
-<P>Roadmap v1.0rc4 (gzip'ed tar files): 
-<UL>
-  <LI><A class=normal 
-         href="/roadmap/roadmap_1_0rc4_src.tar.gz">Sources only</A> 
-  <LI><A class=normal 
-         href="/roadmap/roadmap_1_0rc4_i686.tar.gz">Linux/i686 binaries</A> 
-  <LI><A class=normal 
-         href="/roadmap/roadmap_1_0rc4_armv4l.tar.gz">Linux/ARM binaries</A>
-  </LI>
-</UL>
-<P>Roadmap v1.0rc3 (gzip'ed tar files): 
-<UL>
-  <LI><A class=normal 
-         href="/roadmap/roadmap_1_0rc3_src.tar.gz">Sources only</A> 
-  <LI><A class=normal 
-         href="/roadmap/roadmap_1_0rc3_i686.tar.gz">Linux/i686 binaries</A> 
-  <LI><A class=normal 
-         href="/roadmap/roadmap_1_0rc3_armv4l.tar.gz">Linux/ARM binaries</A>
-  </LI>
-</UL>
-<P>Roadmap v1.0rc2 (gzip'ed tar files): 
-<UL>
-  <LI><A class=normal 
-         href="/roadmap/roadmap_1_0rc2_src.tar.gz">Sources only</A> 
-  <LI><A class=normal 
-         href="/roadmap/roadmap_1_0rc2_i686.tar.gz">Linux/i686 binaries</A> 
-  <LI><A class=normal 
-         href="/roadmap/roadmap_1_0rc2_armv4l.tar.gz">Linux/ARM binaries</A>
-  </LI>
-</UL>
-<P>Roadmap v1.0rc1 (gzip'ed tar files): 
-<UL>
-  <LI><A class=normal 
-         href="/roadmap/roadmap_1_0rc1_src.tar.gz">Sources only</A> 
-  <LI><A class=normal 
-         href="/roadmap/roadmap_1_0rc1_i686.tar.gz">Linux/i686 binaries</A> 
-  <LI><A class=normal 
-         href="/roadmap/roadmap_1_0rc1_armv4l.tar.gz">Linux/ARM binaries</A>
-  </LI>
-</UL>
-<P>Roadmap v0.15 (gzip'ed tar files): 
-<UL>
-  <LI><A class=normal 
-         href="/roadmap/roadmap_0_15_src.tar.gz">Sources only</A> 
-  <LI><A class=normal 
-         href="/roadmap/roadmap_0_15_i686.tar.gz">Linux/i686 binaries</A> 
-  <LI><A class=normal 
-         href="/roadmap/roadmap_0_15_armv4l.tar.gz">Linux/ARM binaries</A>
-  </LI>
-</UL>
-<P>Roadmap v0.14 (gzip'ed tar files): 
-<UL>
-  <LI><A class=normal 
-         href="/roadmap/roadmap_0_14_src.tar.gz">Sources only</A> 
-  <LI><A class=normal 
-         href="/roadmap/roadmap_0_14_i686.tar.gz">Linux/i686 binaries</A> 
-  <LI><A class=normal 
-         href="/roadmap/roadmap_0_14_armv4l.tar.gz">Linux/ARM binaries</A>
-  </LI>
-</UL>
-<P>Roadmap v0.13 (gzip'ed tar files): 
-<UL>
-  <LI><A class=normal 
-  href="/roadmap/roadmap_0_13_src.tgz">Sources 
-  only</A> 
-  <LI><A class=normal 
-  href="/roadmap/roadmap_0_13_i686.tgz">Linux/i686 
-  binaries</A> 
-  <LI><A class=normal 
-  href="/roadmap/roadmap_0_13_armv4l.tgz">Linux/ARM 
-  binaries</A> </LI></UL>
+The RoadMap files below are tar files compressed using <b>gzip</b>.
+<P>
+<P>RoadMap v1.0:
+<A class=normal href="/roadmap/roadmap_1_0_src.tar.gz">Sources only</A>,
+<A class=normal 
+   href="/roadmap/roadmap_1_0_i686.tar.gz">Linux/i686 binaries</A>,
+<A class=normal 
+   href="/roadmap/roadmap_1_0_armv4l.tar.gz">Linux/ARM binaries</A>.
+
+<P>RoadMap v1.0rc6:
+<A class=normal 
+   href="/roadmap/roadmap_1_0rc6_src.tar.gz">Sources only</A>,
+<A class=normal 
+   href="/roadmap/roadmap_1_0rc6_i686.tar.gz">Linux/i686 binaries</A>,
+<A class=normal 
+   href="/roadmap/roadmap_1_0rc6_armv4l.tar.gz">Linux/ARM binaries</A>.
+
+<P>Roadmap v1.0rc5:
+<A class=normal 
+   href="/roadmap/roadmap_1_0rc5_src.tar.gz">Sources only</A>,
+<A class=normal 
+   href="/roadmap/roadmap_1_0rc5_i686.tar.gz">Linux/i686 binaries</A>,
+<A class=normal 
+   href="/roadmap/roadmap_1_0rc5_armv4l.tar.gz">Linux/ARM binaries</A>.
+
+<P>Roadmap v1.0rc4:
+<A class=normal 
+   href="/roadmap/roadmap_1_0rc4_src.tar.gz">Sources only</A>,
+<A class=normal 
+   href="/roadmap/roadmap_1_0rc4_i686.tar.gz">Linux/i686 binaries</A>,
+<A class=normal 
+   href="/roadmap/roadmap_1_0rc4_armv4l.tar.gz">Linux/ARM binaries</A>.
+
+<P>Roadmap v1.0rc3:
+<A class=normal 
+   href="/roadmap/roadmap_1_0rc3_src.tar.gz">Sources only</A>,
+<A class=normal 
+   href="/roadmap/roadmap_1_0rc3_i686.tar.gz">Linux/i686 binaries</A>,
+<A class=normal 
+   href="/roadmap/roadmap_1_0rc3_armv4l.tar.gz">Linux/ARM binaries</A>.
+
+<P>Roadmap v1.0rc2:
+<A class=normal 
+   href="/roadmap/roadmap_1_0rc2_src.tar.gz">Sources only</A>,
+<A class=normal 
+   href="/roadmap/roadmap_1_0rc2_i686.tar.gz">Linux/i686 binaries</A>,
+<A class=normal 
+   href="/roadmap/roadmap_1_0rc2_armv4l.tar.gz">Linux/ARM binaries</A>.
+
+<P>Roadmap v1.0rc1:
+<A class=normal 
+   href="/roadmap/roadmap_1_0rc1_src.tar.gz">Sources only</A>,
+<A class=normal 
+   href="/roadmap/roadmap_1_0rc1_i686.tar.gz">Linux/i686 binaries</A>,
+<A class=normal 
+   href="/roadmap/roadmap_1_0rc1_armv4l.tar.gz">Linux/ARM binaries</A>.
+
+<P>Roadmap v0.15:
+<A class=normal 
+   href="/roadmap/roadmap_0_15_src.tar.gz">Sources only</A>,
+<A class=normal 
+   href="/roadmap/roadmap_0_15_i686.tar.gz">Linux/i686 binaries</A>,
+<A class=normal 
+   href="/roadmap/roadmap_0_15_armv4l.tar.gz">Linux/ARM binaries</A>.
+
+<P>Roadmap v0.14:
+<A class=normal 
+   href="/roadmap/roadmap_0_14_src.tar.gz">Sources only</A>,
+<A class=normal 
+   href="/roadmap/roadmap_0_14_i686.tar.gz">Linux/i686 binaries</A>,
+<A class=normal
+   href="/roadmap/roadmap_0_14_armv4l.tar.gz">Linux/ARM binaries</A>.
+
+<P>Roadmap v0.13:
+<A class=normal href="/roadmap/roadmap_0_13_src.tgz">Sources only</A>,
+<A class=normal href="/roadmap/roadmap_0_13_i686.tgz">Linux/i686 binaries</A>,
+<A class=normal href="/roadmap/roadmap_0_13_armv4l.tgz">Linux/ARM binaries</A>.
 </BODY></HTML>
 
