--- a/trunk/roadmap/web/bugs.html
+++ b/trunk/roadmap/web/bugs.html
@@ -7,14 +7,15 @@ href="/sitestandard.css" type=text/css rel=stylesheet>
 <CENTER>
 <H1>RoadMap: Bugs</H1><BR></CENTER>
 <HR>
-<<a class="normal" href="index.html">Home</a>
+<a class="normal" href="index.html">Home</a>
 <a class="normal" href="download.html">Download</a>
 <a class="normal" href="screenshots.html">Screenshots</a>
 <a class="normal" href="history.html">History</a>
 <a class="normal" href="maps.html">Maps</a>
 <a class="normal" href="hardware.html">Hardware</a>
 <a class="normal" href="bugs.html">Bugs</a>     
-<a class="normal" href="list.html">Mailing List</a>
+<a class="normal" href="list.html">Mail</a>
+<a class="normal" href="todo.html">Todo</a>
 <HR> <BR>
 <P>WARNING: RoadMap is not yet capable of handling all US counties,
 due to a handful of bugs. Here are the details:
